[gd_scene load_steps=3 format=3 uid="uid://c1nqg4yjf3634"]

[ext_resource type="Script" path="res://Scripts/GunPoint.gd" id="1_ey7wl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ykads"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("WeaponSkin:flip_v")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="GunPoint" type="Node2D"]
script = ExtResource("1_ey7wl")
metadata/_edit_vertical_guides_ = [15.0]

[node name="WeaponSkin" type="Sprite2D" parent="."]
position = Vector2(23, -3)

[node name="ReloadCooldown" type="Timer" parent="."]
one_shot = true

[node name="GunCooldown" type="Timer" parent="."]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(36, -3)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ykads")

[connection signal="timeout" from="ReloadCooldown" to="." method="_on_reload_cooldown_timeout"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
